--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,7 @@
-# Environment variables template
-# Copy this file to .env and fill in your actual values
-# DO NOT commit .env with real credentials to git
 
-# Database connection string
-# Format: postgresql://user:password@host:port/database?sslmode=require
-DATABASE_URL="postgresql://user:password@host:port/database?sslmode=require"
+DATABASE_URL="postgresql://neondb_owner:npg_E54oaNjkfgHV@ep-morning-darkness-a49z3ked-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+BETTER_AUTH_SECRET="gPiexlE1HBtcYwrdgh4yifvwrYVCWVY5"
 
-# Better Auth secret - generate a secure random string
-# You can generate one using: openssl rand -base64 32
-BETTER_AUTH_SECRET="your-secret-key-here"
 
 # Base URL of your application
 BETTER_AUTH_URL="http://localhost:3000"
