Update environment configuration to include custom domain email and app URL. Added RESEND_FROM_EMAIL and NEXT_PUBLIC_APP_URL variables for improved email handling and application deployment.

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 DATABASE_URL="postgresql://neondb_owner:npg_E54oaNjkfgHV@ep-morning-darkness-a49z3ked-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 BETTER_AUTH_SECRET="gPiexlE1HBtcYwrdgh4yifvwrYVCWVY5"
 RESEND_API_KEY="re_HZW9Fqko_3UAgSSiWRhiCWSUdRXPucsa6"
+
+# Your custom domain email (e.g., "Your App <noreply@yourdomain.com>")
+RESEND_FROM_EMAIL="fsehahagos23@gmail.com"
+# Your app URL (e.g., "https://yourdomain.com")
+NEXT_PUBLIC_APP_URL=https://fishtech.com.et
