Update email configuration and debugging documentation. Changed RESEND_FROM_EMAIL to a custom domain and improved the EMAIL_DEBUG.md with detailed instructions for domain verification and testing. Enhanced error logging in email handling to provide clearer guidance on domain verification issues.

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ BETTER_AUTH_SECRET="gPiexlE1HBtcYwrdgh4yifvwrYVCWVY5"
 RESEND_API_KEY="re_HZW9Fqko_3UAgSSiWRhiCWSUdRXPucsa6"
 
 # Your custom domain email (e.g., "Your App <noreply@yourdomain.com>")
-RESEND_FROM_EMAIL="fsehahagos23@gmail.com"
+RESEND_FROM_EMAIL="noreply@fishtech.com.et"
 # Your app URL (e.g., "https://yourdomain.com")
 NEXT_PUBLIC_APP_URL=https://fishtech.com.et
